<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dog_photo"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/img_dog_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/frame"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/frame"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dog_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fergie is Lost!"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Labrador"
                android:textColor="@color/grey_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textColor="@color/grey_text_color"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/contact_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_owner"
                    android:textColor="@color/grey_text_color"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:id="@+id/contact_by_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/phone_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/phone_icon"
                        android:text="@string/call_mobile"
                        android:textColor="@color/darkgrey_text_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/contact_by_messaging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/message_icon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/message" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/message_icon"
                        android:text="@string/app_messaging"
                        android:textColor="@color/darkgrey_text_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/arrow_alerts" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <RelativeLayout
            android:id="@+id/btn_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/lost_btn_bg"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/lost"
                android:textAllCaps="false"
                android:textColor="@color/btn_lost_bg"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/found_btn_bg"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/found"
                android:textAllCaps="false"
                android:textColor="@color/btn_lost_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/match_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/found_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:src="@drawable/snout" />

            <TextView
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/found_icon"
                android:text="@string/match"
                android:textAllCaps="false"
                android:textColor="@color/btn_found_selected_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>