<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/profile_toolbar_bg"
            android:weightSum="1"
            app:popupTheme="@style/PopupOverlay">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="#00ffffff"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/hamburger" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_my_profile"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btn_add"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="10dp"
                    android:background="#00ffffff"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/add_dog2" />

            </FrameLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/btn_found_selected_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <android.support.v7.widget.CardView
            android:id="@+id/photo_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="@color/colorNeutralDark"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Profile Image"
                android:textColor="@color/colorNeutralLight"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_user_default" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/photo_view"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jane Smith"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_user_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Owner"
                android:textColor="@color/profile_text_color"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/contact_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_me"
                    android:textColor="@color/profile_text_color"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:id="@+id/contact_by_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/phone_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/phone_icon"
                        android:text="@string/call_mobile"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/contact_by_messaging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/message_icon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/message_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/message_icon"
                        android:text="@string/app_messaging"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="My Location is my dog's home"
                android:textColor="@color/profile_text_color"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_profile_user"
            android:tint="@color/colorNeutralDark" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dog_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_view" />

</LinearLayout>